line spacing for post-title corrected from -1px to 0px

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -213,11 +213,11 @@
 }
 
 .page-heading {
-  @include relative-font-size(2);
+  @include relative-font-size(1.778);
 }
 
 .post-list-heading {
-  @include relative-font-size(1.75);
+  @include relative-font-size(1.778);
 }
 
 .post-list {
@@ -255,7 +255,7 @@
 
 .post-title {
   @include relative-font-size(2.625);
-  letter-spacing: -1px;
+  letter-spacing: 0px;
   line-height: 1;
 
   @include media-query($on-laptop) {
